♻️: Updated multiple package versions and iterated the code

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-APScheduler~=3.10.1
-fastapi~=0.94.1
+APScheduler~=3.10.4
+fastapi~=0.111.0
 jose~=1.0.0
-loguru~=0.6.0
-peewee~=3.16.0
-starlette~=0.26.1
-uvicorn~=0.21.0
-pymysql
-passlib[bcrypt]
-pydantic[dotenv]
+loguru~=0.7.2
+aiopg~=1.4.0
+peewee~=3.17.5
+starlette~=0.37.2
+uvicorn~=0.30.1
+psycopg2-binary
+bcrypt~=4.1.3
+pydantic
+pydantic-settings
 python-jose[cryptography]
-redis~=5.0.1
+redis~=5.0.7
