--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,23 @@
 APP_NAME=fastapi-app
 APP_DEBUG=True
 APP_ENV=local
+APP_API_PREFIX="/api"
 APP_SERVER_HOST="0.0.0.0"
 APP_SERVER_PORT=8000
+APP_URL="http://localhost"
+APP_TIME_ZONE=CST
 
 LOG_LEVEL=DEBUG
 
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=fastapi
-DB_USER=root
-DB_PASSWORD=123456
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=fastapi
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=fastapi123456
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
-#REDIS_PASSWORD=None
+REDIS_PASSWORD=fastapi123456
 
-JWT_SECRET_KEY="abcXYZ123456"
+JWT_SECRET_KEY=fastapi123456
