♻️: fix some issues and replace some code that is no longer recommended

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Debug FastAPI",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/uvicorn_entry.py",
+            "program": "${workspaceFolder}/main.py",
             "args": [],
             "console": "integratedTerminal",
             "justMyCode": false,
